# Simulated_Trading_Platform

./: .env  .env.example  .gitignore  README.md  setup.sh  test_all.sh  test_integration.sh  todo.md
Backend/: .dockerignore  Dockerfile
Backend/api/: .dockerignore  .flake8  Dockerfile  README.md  base_router.py  conftest.py  database.py  dependencies.py  main.py  models.py  performance_optimizer.py  pyproject.toml  pytest.ini  requirements.txt  response_models.py  setup_env.sh  simulation_engine.py  strategy_factory.py  strategy_registry.py  test_orchestrator_integration.py  test_startup.py  validation.py
Backend/api/api_components/: __init__.py  response_formatter.py  router_logger.py  validation_service.py
Backend/api/db_components/: __init__.py  cache_manager.py  connection_manager.py  query_executor.py
Backend/api/repositories/: __init__.py  stock_data_repository.py
Backend/api/routers/: __init__.py  engine.py  health.py  performance.py  simulation.py  stocks.py  strategies.py
Backend/api/routing/: __init__.py  router_base.py  service_factory.py
Backend/api/services/: __init__.py  equity_processor.py  error_categorizers.py  error_handler.py  error_types.py  execution_service.py  performance_calculator.py  result_processor.py  strategy_service.py  strategy_service_implementation.py  temporal_validation_service.py  trade_converter.py
Backend/api/strategies/: __init__.py  ma_crossover_strategy.py  rsi_strategy.py
Backend/api/tests/: comprehensive_API_testing.py  run_comprehensive_tests.py  test_database.py  test_validation.py
Backend/cpp-common/: CMakeLists.txt
Backend/cpp-common/include/: simulation_config.h  worker_result.h
Backend/cpp-common/src/: simulation_config.cpp  worker_result.cpp
Backend/cpp-engine/: .dockerignore  CMakeLists.txt  Dockerfile  build.sh
Backend/cpp-engine/include/: argument_parser.h  command_dispatcher.h  data_conversion.h  data_processor.h  database_connection.h  database_service.h  date_time_utils.h  error_utils.h  execution_service.h  json_helpers.h  logger.h  market_data.h  memory_optimizable.h  order.h  portfolio.h  portfolio_allocator.h  position.h  progress_service.h  result.h  result_calculator.h  strategy_manager.h  technical_indicators.h  trading_engine.h  trading_exceptions.h  trading_orchestrator.h  trading_strategy.h
Backend/cpp-engine/src/: argument_parser.cpp  command_dispatcher.cpp  data_conversion.cpp  data_processor.cpp  database_connection.cpp  database_service.cpp  date_time_utils.cpp  error_utils.cpp  execution_service.cpp  json_helpers.cpp  main.cpp  market_data.cpp  order.cpp  portfolio.cpp  portfolio_allocator.cpp  position.cpp  progress_service.cpp  result.cpp  result_calculator.cpp  strategy_manager.cpp  technical_indicators.cpp  trading_engine.cpp  trading_orchestrator.cpp  trading_strategy.cpp
Backend/cpp-engine/tests/: engine_testing.sh  test_basic.cpp  test_comprehensive.cpp
Backend/simulation-orchestrator/: CMakeLists.txt
Backend/simulation-orchestrator/include/: execution_planner.h  strategy_analyzer.h  worker_spawner.h
Backend/simulation-orchestrator/src/: execution_planner.cpp  main.cpp  strategy_analyzer.cpp  worker_spawner.cpp
Backend/trading-engine/: CMakeLists.txt  Dockerfile
Backend/trading-engine/include/: argument_parser.h  command_dispatcher.h  json_helpers.h  logger.h  market_data.h  memory_optimizable.h  order.h  portfolio_allocator.h  technical_indicators.h  trading_orchestrator.h
Backend/trading-engine/src/: command_dispatcher.cpp  data_conversion.cpp  data_processor.cpp  database_connection.cpp  date_time_utils.cpp  error_utils.cpp  execution_service.cpp  json_helpers.cpp  logger.cpp  main.cpp  portfolio.cpp  position.cpp  result.cpp  result_calculator.cpp  strategy_manager.cpp  technical_indicators.cpp  trading_strategy.cpp
Backend/trading-engine/tests/: engine_testing.sh  test_comprehensive.cpp
Database/: 02-setup.sh  CSVtoPostgres.py  DBsetup.sh  DataGathering.py  Dockerfile  data_cleaning.py  data_integrity_verification.py  data_utils.py  data_validation.py  init.sql  requirements.txt  test_connection.py
Database/historical_data/: stock_info.json  summary.json
Database/historical_data/daily/: AAPL_daily.csv  ADBE_daily.csv  AMZN_daily.csv  BAC_daily.csv  CRM_daily.csv  DIS_daily.csv  GOOGL_daily.csv  HD_daily.csv  JNJ_daily.csv  JPM_daily.csv  MA_daily.csv  META_daily.csv  MSFT_daily.csv  NFLX_daily.csv  NVDA_daily.csv  PG_daily.csv  QCOM_daily.csv  TSLA_daily.csv  T_daily.csv  UNH_daily.csv  V_daily.csv  WMT_daily.csv  X_daily.csv  ^NYA_daily.csv  ^SPX_daily.csv
Database/historical_data/intraday/: AAPL_intraday.csv  ADBE_intraday.csv  AMZN_intraday.csv  BAC_intraday.csv  CRM_intraday.csv  DIS_intraday.csv  GOOGL_intraday.csv  HD_intraday.csv  JNJ_intraday.csv  JPM_intraday.csv  MA_intraday.csv  META_intraday.csv  MSFT_intraday.csv  NFLX_intraday.csv  NVDA_intraday.csv  PG_intraday.csv  QCOM_intraday.csv  TSLA_intraday.csv  T_intraday.csv  UNH_intraday.csv  V_intraday.csv  WMT_intraday.csv  (+3 more)
Docker/: README.md  docker-compose.dev.yml  docker-compose.yml  docker-setup.sh  health-check.sh  monitoring.py
Frontend/: .gitignore
Frontend/trading-platform-ui/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
Project_Documentation/: APIstructure.md  CPP_Engine_Development_Plan.md  DBtoFE.md  DatabaseStructure.md  Directory_Structure.docx  DockerDeployment.md  EngineDevPlan.md  EngineFixPlan.md  EngineStructure.md  Environment.md  FileStructure.md  FrontendArchitecture.md  Idea.md  Improvements.md  Knowledge.md  NextSteps.md  Notes.md  Optimisations.md  OptimizationsGuide.docx  Phase1_RoadMap.docx  Roadmap1.md  SystemArchitecture.md  notes.txt  todo.md
Project_Documentation/DOCX files/: KnowledgeGuide.docx  Phase1_RoadMap.docx  Project_Idea.docx
test_data/: db_seed.py  test_db_isolation.sh
test_data/datasets/: README.md
test_data/mock_responses/: api_responses.json  simulation_responses.json
test_data/sample_configs/: basic_ma_crossover.json  invalid_configs.json  multi_stock_portfolio.json  rsi_strategy.json
(+95 files in other folders)
